--- a/style.css
+++ b/style.css
@@ -1438,6 +1438,19 @@ select.form-control {
   }
 }
 
+/* Recibos impresos compactos */
+.receipt {
+  font-size: 0.7rem !important;
+  line-height: 1.05 !important;
+  padding: 0.5rem !important;
+  max-width: 320px !important;
+}
+.receipt h3, .receipt h4, .receipt p, .receipt ul, .receipt li {
+  font-size: 0.7em !important;
+  line-height: 1.05 !important;
+  margin: 0.1em 0 !important;
+}
+
 /* Responsive design */
 /* Mantener columnas en grid en todas las resoluciones */
 @media (max-width: 1200px), (max-width: 900px), (max-width: 768px), (max-width: 650px) {
